# agent-casino

./: .gitignore  AUDIT-REMAINING.md  Anchor.toml  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  SECURITY_AUDIT_10.md  SECURITY_AUDIT_11.md  SKILL.md  audit-round-9.md  broken_promises.md  demo.cast  hackathon.sh  package-lock.json  package.json  skill.md  tsconfig.json  vote-rewards.json
demo/: debug-vrf.ts  full-showcase.ts  showcase-recording.cast  showcase.ts  test-commit-reveal.ts  test-commit-reveal2.ts  test-manual-vrf.ts  test-vrf-flow.ts  test-vrf.ts
examples/: analyst-agent.ts  degen-agent.ts  house-agent.ts  quick-play.ts
programs/agent_casino/: Cargo.toml
programs/agent_casino/src/: cpi_helpers.rs  lib.rs
programs/agent_casino/tests/: litesvm_tests.rs.bak
scripts/: add-liquidity.ts  auto-play.ts  bounty-checker.sh  check-house.ts  check-vote-rewards.ts  claim-hit.ts  create-hackathon-market.ts  create-hit.ts  demo.sh  demo.ts  forum-reply-agent.sh  heartbeat.sh  init-hitpool.ts  init-house.ts  initialize-house.ts  list-hits.ts  lottery-buy.ts  lottery-claim.ts  lottery-create.ts  lottery-draw.ts  lottery-view.ts  memory-create-pool.ts  memory-deposit.ts  memory-my-deposits.ts  memory-pull.ts  memory-rate.ts  memory-view-pool.ts  memory-withdraw.ts  open-market-commit.ts  open-market-create.ts  open-market-resolve.ts  open-market-reveal.ts  open-market-view.ts  play-coinflip.ts  play-crash.ts  play-diceroll.ts  play-limbo-low.ts  play-limbo.ts  prediction-claim-winnings.ts  prediction-commit-bet.ts  (+19 more)
sdk/: package.json  tsconfig.json
(+19 files in other folders)
