[package]
name = "agent-casino"
version = "0.1.0"
description = "Agent Casino Protocol - Trust-building primitive for AI agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_casino"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
switchboard-on-demand = { version = "0.11.3", features = ["anchor"] }
solana-sha256-hasher = "2.3.0"
solana-hash = "2.3.0"

# Dev-dependencies for on-chain tests (run with: SBF_OUT_DIR=target/deploy cargo test)
# Temporarily commented out during anchor build due to blake3 edition2024 conflict
# Uncomment to run: cargo test --package agent-casino --test litesvm_tests
# [dev-dependencies]
# solana-program-test = "2.2"
# solana-sdk = "2.2"
# sha2 = "0.10"
# tokio = { version = "1", features = ["full"] }
